Fixed overflow

--- a/src/components/Newsletter/style.scss
+++ b/src/components/Newsletter/style.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.newsletter-form-wrapper {
+  overflow-x: hidden;
+}
+
 #newsletter-form {
   position: relative;
 
